frontend/src/components/navbar/Navbar.css
.navbar-main {
    display: flex;
    height: 100vh;
    flex-direction: column;
    background-color: #47A6C2;
    z-index: -10;
}

.navbar-top {
    height: 10vh;
    width: 100%;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.navbar-hamburguer {
    margin-right: 2em;
}

.navbar-mid {
    height: 75vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}

.navbar-li {
    display: flex;
    margin-left: 1em;
    padding: 10px;
    font-family: Karla;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.navbar-li p {
    margin-left: 15px;
}

.navbar-bottom {
    display: flex;
    align-items: center;
    height: 15vh;
    width: 100%;
    background-color: #004567;
}

.navbar-signIn {
    margin-left: 1em;
    display: flex;
    color: white;
    text-align: center;
}

.navbar-signIn p {
    margin-left: 1em;
    font-family: Karla;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    text-align: center;
}

